[gd_scene load_steps=50 format=2]

[ext_resource path="res://Assets/Images/Enemies/Spider/IdlePurple2/SpiderIdleFront3.png" type="Texture" id=1]
[ext_resource path="res://Assets/Images/Enemies/Spider/IdlePurple2/SpiderIdleFront1.png" type="Texture" id=2]
[ext_resource path="res://Assets/Images/Enemies/Spider/IdlePurple2/SpiderIdleFront4.png" type="Texture" id=3]
[ext_resource path="res://Assets/Images/Enemies/Spider/IdlePurple2/SpiderIdleFront2.png" type="Texture" id=4]
[ext_resource path="res://World/Enemies/Spider.gd" type="Script" id=5]
[ext_resource path="res://Assets/Images/Enemies/Spider/WalkingPurple2/SpiderWalkingUp3.png" type="Texture" id=6]
[ext_resource path="res://Assets/Images/Enemies/Spider/WalkingPurple2/SpiderWalkingUp2.png" type="Texture" id=7]
[ext_resource path="res://Assets/Images/Enemies/Spider/WalkingPurple2/SpiderWalkingUp4.png" type="Texture" id=8]
[ext_resource path="res://Assets/Images/Enemies/Spider/WalkingPurple2/SpiderWalkingUp1.png" type="Texture" id=9]
[ext_resource path="res://Assets/Images/Magic/lightning/Shock_Small.png" type="Texture" id=14]
[ext_resource path="res://Assets/Themes/Flash.tres" type="Material" id=15]
[ext_resource path="res://Assets/Images/Enemies/Spider/IdlePurple2/SpiderIdleSide2.png" type="Texture" id=16]
[ext_resource path="res://Assets/Images/Enemies/Spider/IdlePurple2/SpiderIdleSide1.png" type="Texture" id=17]
[ext_resource path="res://Assets/Images/Enemies/Spider/IdlePurple2/SpiderIdleSide3.png" type="Texture" id=18]
[ext_resource path="res://Assets/Images/Enemies/Spider/IdlePurple2/SpiderIdleSide4.png" type="Texture" id=19]
[ext_resource path="res://Assets/Images/Enemies/Spider/IdlePurple2/SpiderIdleUp1.png" type="Texture" id=20]
[ext_resource path="res://Assets/Images/Enemies/Spider/IdlePurple2/SpiderIdleUp4.png" type="Texture" id=21]
[ext_resource path="res://Assets/Images/Enemies/Spider/IdlePurple2/SpiderIdleUp2.png" type="Texture" id=22]
[ext_resource path="res://Assets/Images/Enemies/Spider/IdlePurple2/SpiderIdleUp3.png" type="Texture" id=23]
[ext_resource path="res://Assets/Images/Enemies/Spider/WalkingPurple2/SpiderWalkingSide1.png" type="Texture" id=24]
[ext_resource path="res://Assets/Images/Enemies/Spider/WalkingPurple2/SpiderWalking2.png" type="Texture" id=25]
[ext_resource path="res://Assets/Images/Enemies/Spider/WalkingPurple2/SpiderWalkingSide4.png" type="Texture" id=26]
[ext_resource path="res://Assets/Images/Enemies/Spider/WalkingPurple2/SpiderWalking1.png" type="Texture" id=27]
[ext_resource path="res://Assets/Images/Enemies/Spider/WalkingPurple2/SpiderWalking3.png" type="Texture" id=28]
[ext_resource path="res://Assets/Images/Enemies/Spider/WalkingPurple2/SpiderWalking4.png" type="Texture" id=29]
[ext_resource path="res://Assets/Images/Enemies/Spider/WalkingPurple2/SpiderWalkingSide2.png" type="Texture" id=30]
[ext_resource path="res://Assets/Images/Enemies/Spider/WalkingPurple2/SpiderWalkingSide3.png" type="Texture" id=31]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="CircleShape2D" id=15]
radius = 12.0

[sub_resource type="CircleShape2D" id=16]
radius = 16.0312

[sub_resource type="Animation" id=17]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("../Spider:material:shader_param/flash_modifier")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=18]
resource_name = "hit"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("../Spider:material:shader_param/flash_modifier")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1.0, 0.0 ]
}

[sub_resource type="AtlasTexture" id=145]
atlas = ExtResource( 14 )
region = Rect2( 0, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 14 )
region = Rect2( 24, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=146]
atlas = ExtResource( 14 )
region = Rect2( 48, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 14 )
region = Rect2( 72, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 14 )
region = Rect2( 96, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 14 )
region = Rect2( 120, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 14 )
region = Rect2( 144, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 14 )
region = Rect2( 168, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 14 )
region = Rect2( 192, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 14 )
region = Rect2( 216, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 14 )
region = Rect2( 240, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 14 )
region = Rect2( 264, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 14 )
region = Rect2( 288, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 14 )
region = Rect2( 312, 0, 24, 24 )

[sub_resource type="SpriteFrames" id=147]
animations = [ {
"frames": [ SubResource( 145 ), SubResource( 40 ), SubResource( 146 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 29 ) ],
"loop": true,
"name": "default",
"speed": 8.0
} ]

[sub_resource type="CircleShape2D" id=148]
radius = 194.003

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 4 ), ExtResource( 1 ), ExtResource( 3 ) ],
"loop": true,
"name": "idle down",
"speed": 8.0
}, {
"frames": [ ExtResource( 17 ), ExtResource( 16 ), ExtResource( 18 ), ExtResource( 19 ) ],
"loop": true,
"name": "idle right",
"speed": 8.0
}, {
"frames": [ ExtResource( 20 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 21 ) ],
"loop": true,
"name": "idle up",
"speed": 8.0
}, {
"frames": [ ExtResource( 27 ), ExtResource( 25 ), ExtResource( 28 ), ExtResource( 29 ) ],
"loop": true,
"name": "walk down",
"speed": 8.0
}, {
"frames": [ ExtResource( 24 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 26 ) ],
"loop": true,
"name": "walk right",
"speed": 8.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 7 ), ExtResource( 6 ), ExtResource( 8 ) ],
"loop": true,
"name": "walk up",
"speed": 8.0
} ]

[node name="Spider" type="KinematicBody2D"]
script = ExtResource( 5 )

[node name="PoisonParticles" type="Node2D" parent="."]

[node name="P3" type="CPUParticles2D" parent="PoisonParticles"]
modulate = Color( 1.35, 1.35, 1.35, 1 )
emitting = false
amount = 10
lifetime = 2.5
lifetime_randomness = 0.8
local_coords = false
emission_shape = 2
emission_rect_extents = Vector2( 12, 4 )
direction = Vector2( -1, 0 )
spread = 30.0
gravity = Vector2( 0, 0 )
initial_velocity = 70.0
initial_velocity_random = 0.8
scale_amount = 4.0
scale_amount_random = 0.7
color = Color( 0, 0.332031, 0, 1 )

[node name="P2" type="CPUParticles2D" parent="PoisonParticles"]
modulate = Color( 1.35, 1.35, 1.35, 1 )
emitting = false
amount = 10
lifetime = 2.5
lifetime_randomness = 0.8
local_coords = false
emission_shape = 2
emission_rect_extents = Vector2( 32, 4 )
direction = Vector2( -1, 0 )
spread = 30.0
gravity = Vector2( 0, 0 )
initial_velocity = 70.0
initial_velocity_random = 0.8
scale_amount = 4.0
scale_amount_random = 0.7
color = Color( 0.145098, 0.545098, 0.145098, 1 )

[node name="P1" type="CPUParticles2D" parent="PoisonParticles"]
modulate = Color( 1.35, 1.35, 1.35, 1 )
emitting = false
amount = 10
lifetime = 2.5
lifetime_randomness = 0.8
local_coords = false
emission_shape = 2
emission_rect_extents = Vector2( 32, 4 )
direction = Vector2( -1, 0 )
spread = 30.0
gravity = Vector2( 0, 0 )
initial_velocity = 70.0
initial_velocity_random = 0.8
scale_amount = 4.0
scale_amount_random = 0.7
color = Color( 0.14902, 0.937255, 0.14902, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_desired_distance = 2.0
target_desired_distance = 10.0
path_max_distance = 20.0
avoidance_enabled = true
max_speed = 100.0

[node name="SpiderHit" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 128

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpiderHit"]
shape = SubResource( 15 )

[node name="Timers" type="Node" parent="."]

[node name="IdleTimer" type="Timer" parent="Timers"]
wait_time = 5.0
autostart = true

[node name="ChaseTimer" type="Timer" parent="Timers"]
wait_time = 0.1

[node name="FrozenTimer" type="Timer" parent="Timers"]
wait_time = 5.0
one_shot = true

[node name="StunnedTimer" type="Timer" parent="Timers"]
wait_time = 2.0
one_shot = true

[node name="ChangeDirectionDelay" type="Timer" parent="Timers"]
wait_time = 0.5
one_shot = true

[node name="PoisonTimer" type="Timer" parent="Timers"]
wait_time = 8.0
one_shot = true

[node name="KnockbackTimer" type="Timer" parent="Timers"]
wait_time = 0.25
one_shot = true

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 262400
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
shape = SubResource( 16 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="HurtBox"]
anims/RESET = SubResource( 17 )
anims/hit = SubResource( 18 )

[node name="Electricity" type="AnimatedSprite" parent="."]
visible = false
modulate = Color( 1.22, 1.22, 1.22, 1 )
scale = Vector2( 2, 2 )
frames = SubResource( 147 )
frame = 11
playing = true

[node name="DetectPlayer" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectPlayer"]
shape = SubResource( 148 )

[node name="Spider" type="AnimatedSprite" parent="."]
material = ExtResource( 15 )
scale = Vector2( 2, 2 )
frames = SubResource( 2 )
animation = "walk up"
playing = true

[node name="SoundEffects" type="AudioStreamPlayer2D" parent="."]

[connection signal="timeout" from="Timers/FrozenTimer" to="." method="_on_FrozenTimer_timeout"]
[connection signal="timeout" from="Timers/StunnedTimer" to="." method="_on_StunnedTimer_timeout"]
[connection signal="timeout" from="Timers/ChangeDirectionDelay" to="." method="_on_ChangeDirectionDelay_timeout"]
[connection signal="timeout" from="Timers/PoisonTimer" to="." method="_on_PoisonTimer_timeout"]
[connection signal="timeout" from="Timers/KnockbackTimer" to="." method="_on_KnockbackTimer_timeout"]
[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="area_entered" from="DetectPlayer" to="." method="_on_DetectPlayer_area_entered"]
